Updated the instagram link!

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
             <div class="contact" id="contact">
               <h1>Get in touch!</h1>
-              <a href="#"><img src="Images/instagram.png" alt="Instagram icon"></a>
+              <a href="https://www.instagram.com/andreipanait39/" target="_blank"><img src="Images/instagram.png" alt="Instagram icon"></a>
               <a href="https://twitter.com/bacovel" target="_blank"><img src="Images/twitter.png" alt="Twitter icon"></a>
               <a href="https://github.com/bacovel?tab=repositories" target="_blank"><img src="Images/github.png" alt="Github icon icon"></a>
 
