solved some minor errors

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="pagecontent">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-              <img src="images/android-chrome-192x192.png" alt="my logo" id="logo">
+              <img src="Images/android-chrome-192x192.png" alt="my logo" id="logo">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -39,7 +39,7 @@
             <h1 class="toph">I'm Andrei.</h1>
             <p class="topp">a web developer.</p>
             <br><br>
-            <img class="meImg" src="images/melaAdiAcasa.jpg" alt="Just Me">
+            <img class="meImg" src="Images/melaAdiAcasa.jpg" alt="Just Me">
             <p class="about">I am a Student at Ovidius University. My research focuses on how computers work and how to make the web a better place for everyone. My work has been supported by Alexandru Bobe, our vice-rector, by giving free courses and bringing the best partners to colaborate with.</p>
             
             <hr>
