--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <div id="emailHelp" class="form-text">I'll never share your email with anyone else.</div>
                   </div>
                   <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Email address</label>
+                    <label for="exampleInputEmail1" class="form-label">Your Name</label>
                     <input type="text" class="form-control" id="exampleInputEmail1"  placeholder="Michael Jordan">
                   </div>
                   <div class="mb-3">
